--- a/index.html
+++ b/index.html
@@ -1,61 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Map with OpenLayers</title>
-    <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
-    <link rel="stylesheet" href="style.css">
-</head>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  </head>
 <body>
-    <h1>Nama: Aulia Maharani</h1>
-    <h1>NPM     :1214079</h1>
-    <h1>Kelas   :3C</h1>
-    <div id="map" class="map"></div>
-    <div id="info-table">
-        <div class="point-table">
-            <h1>Data Poin</h1>
-            <table id="pointTable" border="1">
-                <thead>
-                    <tr>
-                        <th>Nama</th>
-                        <th>Koordinat</th>
-                        <th>Type</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-        
-        <div class="polygon-table">
-            <h1>Data Polygon</h1>
-            <table id="polygonTable" border="1">
-                <thead>
-                    <tr>
-                        <th>Nama</th>
-                        <th>Koordinat</th>
-                        <th>Type</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-        
-        <div class="polyline-table">
-            <h1>Data Polyline</h1>
-            <table id="polylineTable" border="1">
-                <thead>
-                    <tr>
-                        <th>Nama</th>
-                        <th>Koordinat</th>
-                        <th>Type</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-    </div>
-    <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
-    <script src="script.js"></script>
+<style>
+  .yyopenlayer{
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid black;
+    border: transparent;
+    width: 200px;
+    background-color: rgb(126, 185, 236);
+    color: white;
+    border-radius: 30px;
+    text-align: center;
+  }
+  .yyopenlayer:hover{
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid black;
+    border: transparent;
+    width: 200px;
+    background-color: rgb(255, 138, 20);
+    color: white;
+    border-radius: 30px;
+    text-align: center;
+    box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.5);
+  }
+  .yyopenlayer a{
+    color: white;
+    text-decoration: none;
+  }
+</style>
+
+<div class="yyopenlayer">
+  <a href="./yya/index.html">Yaya Tugas - Open Layer</a>
+</div>
+
+<table class="table">
+  <tbody id="lokasi">
+    <tr>
+      <th>Type</th>
+      <th>Nama</th>
+      <th>Kordinat</th>
+    </tr>
+  </tbody>
+</table>
+
+<script type="module" src="./get.js"></script>
+<script type="module" src="./getfunction.js"></script>
+
 </body>
 </html>
